--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -48,9 +48,9 @@
 
 
         <com.github.ybq.android.spinkit.SpinKitView
-            android:visibility="visible"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:visibility="gone"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
             style="@style/SpinKitView.Small.FoldingCube"
             app:SpinKit_Color="@color/colorPrimary"
             />
