--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,6 @@
     <color name="colorAccent">@color/colorPrimaryDark</color>
     <color name="viewBgColor">@color/colorPrimary</color>
     <color name="mainBg">@color/colorPrimaryDark</color>
+
+    <color name="repoColor">#111111</color>
 </resources>
