--- a/app/src/main/res/layout/acount_detail_result.xml
+++ b/app/src/main/res/layout/acount_detail_result.xml
@@ -5,6 +5,13 @@
     android:layoutDirection="ltr"
     android:orientation="vertical">
 
+
+    <ImageView
+        android:id="@+id/imUser"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
