--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,12 @@
 
     <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
+        android:layout_height="match_parent"
 
+        android:layoutDirection="ltr"
+        android:orientation="vertical"
+        android:padding="20dp"
+        tools:context="com.example.jay.githubprofileapp.MainActivity">
 
 
         <TextView
@@ -15,7 +20,7 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="5dp"
             android:padding="5dp"
-            android:text="@string/github_username" />
+            android:text="Github User Name" />
 
 
         <EditText
@@ -24,8 +29,8 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
             android:background="@color/viewBgColor"
-            android:hint="@string/username"
-            android:text=""
+            android:hint="Enter Github User Name"
+            android:text="mahmoudmabrok"
             android:inputType="text"
             android:padding="16dp"
             android:textAlignment="viewStart" />
