add GlideModule & add kapt for ButterKnife & add placeholder

--- a/app/src/main/res/layout/acount_detail_result.xml
+++ b/app/src/main/res/layout/acount_detail_result.xml
@@ -9,8 +9,9 @@
     <ImageView
         android:id="@+id/imUser"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp" />
+        android:layout_height="200dp"
+        android:layout_marginBottom="16dp"
+        android:contentDescription="image" />
 
     <LinearLayout
         android:layout_width="match_parent"
